--- a/package.json
+++ b/package.json
@@ -15,21 +15,34 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/black-han-sans": "^4.5.0",
+    "@fontsource/do-hyeon": "^4.5.0",
+    "@fontsource/jua": "^4.5.0",
+    "@fontsource/noto-sans-kr": "^4.5.2",
+    "@fontsource/noto-serif-kr": "^4.5.3",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.3.0",
     "gatsby-plugin-image": "^2.3.0",
     "gatsby-plugin-manifest": "^4.3.0",
     "gatsby-plugin-mdx": "^3.3.0",
+    "gatsby-plugin-page-creator": "^4.3.0",
+    "gatsby-plugin-postcss": "^5.3.0",
     "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-sharp": "^4.3.0",
     "gatsby-plugin-sitemap": "^5.3.0",
     "gatsby-plugin-theme-ui": "^0.12.1",
+    "gatsby-remark-images": "^6.3.0",
     "gatsby-source-filesystem": "^4.3.0",
     "gatsby-transformer-sharp": "^4.3.0",
+    "postcss": "^8.4.5",
+    "postcss-preset-env": "^7.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "theme-ui": "^0.12.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0"
   }
 }
